--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
 <ul>
   <li>
     <input type="radio" checked name="isCompleted" />
-    <span>Запланированно</span>
+    <span>Запланировaно</span>
   </li>
   <li>
     <input type="radio" checked name="isCompleted" />
